fixed font and image distortion

--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -4,50 +4,26 @@
         display: flex;
         gap: 10%;
     }
-    margin-top: 20px;
+    margin-top: 3%;
     padding-left: 20px;
     justify-content: center;
 }
 
 .left-login {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 28px;
-    margin-bottom: 100px;
-    color: #515151;
     flex: 1;
 }
 
 #titlelogin {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 80px;
-    line-height: 70px;
-    /* identical to box height, or 88% */
-
-
-    color: #48627E;
-
+    font-size: 40px;
 }
 
-.right {
+.right-login {
     width: 500px;
     flex: 1;
 }
 
 #accprompt {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 60px;
-    line-height: 50px;
-    /* or 83% */
-
-
-    color: #585858;
+    font-size: 40px;
 }
 
 .inputborder {
