--- a/src/views/Technology/TechnologyCard.css
+++ b/src/views/Technology/TechnologyCard.css
@@ -14,7 +14,6 @@
     border: 1px solid #EBEBEB;
     box-shadow: 4px 4px 22px 10px rgba(181, 181, 181, 0.3);
     border-radius: 40px;
-
     margin-bottom: 2%;
     width: 100%; /* Reduced by 35% */
     height: auto;
@@ -25,7 +24,7 @@
     flex-direction: row; /* Display elements horizontally */
     align-items: center;
 }
-.right-align {
+.technology-right-align {
     display: flex;
     justify-content: flex-end;
 }
@@ -35,9 +34,9 @@
 }
 
 .technology-appstore-img {
-    margin-top: -15%;
-    margin-left: -18%;
-    scale: 20%;
+    margin-top: -10%;
+    margin-left: -5%;
+    scale: 40%;
 }
 
 #blog-detail {
@@ -67,11 +66,11 @@
 }
 
 .eyespace-card-container {
-    margin-top: -10%;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
     margin-bottom: 0; 
+    margin-top: -2%;
 }
 
 .eyespace-card {
